# whistle-box

./: .gitignore  .prettierignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
scripts/: patch-nsis-lang.mjs  prepare-sidecar.mjs  reset-config.ps1  sync-version.mjs
site/: DEPLOY.md  index.html
src/: App.tsx  defaults.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis-lang/: English.nsh  SimpChinese.nsh
src-tauri/resources/whistle/: package-lock.json  package.json
src-tauri/src/: autostart.rs  lib.rs  main.rs  tray.rs  utils.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/proxy/: mod.rs  pac.rs
src-tauri/src/whistle/: mod.rs
src/components/config/: ConfigManager.tsx
src/components/dashboard/: Dashboard.tsx
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/proxy/: ProxyControl.tsx
src/components/rules/: RuleEditor.tsx
src/components/settings/: Settings.tsx  SettingsUI.tsx  useSettingsForm.ts
src/components/setup/: SetupWizard.tsx
src/components/whistle/: WhistleView.tsx
src/stores/: appStore.ts
src/styles/: globals.css
