[package]
name = "whistle-box"
version = "0.1.0"
edition = "2021"

[lib]
name = "whistle_box_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
sysproxy = "0.3"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.0"
getrandom = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
encoding_rs = "0.8"
